Update role to be a bit more generalized

--- a/templates/update-exim4.conf.j2
+++ b/templates/update-exim4.conf.j2
@@ -1,7 +1,7 @@
-primary_hostname='{{exim_domain}}'
-dc_eximconfig_configtype='internet'
-dc_other_hostnames='{{exim_mailname}} ; {{exim_domain}}'
-dc_local_interfaces='127.0.0.1 ; ::1 ; {{exim_ip}}'
+primary_hostname='{{ exim_domain }}'
+dc_eximconfig_configtype='{{ exim_config_type }}'
+dc_other_hostnames='{{ exim_mailname }} ; {{ exim_domain }}'
+dc_local_interfaces='127.0.0.1 ; ::1 ; {{ exim_ip }}'
 dc_readhost=''
 dc_relay_domains=''
 dc_minimaldns='false'
@@ -11,4 +11,4 @@ CFILEMODE='644'
 dc_use_split_config='false'
 dc_hide_mailname=''
 dc_mailname_in_oh='true'
-dc_localdelivery='mail_spool'
+dc_localdelivery='{{ exim_localdelivery }}'
