--- a/templates/update-exim4.conf.j2
+++ b/templates/update-exim4.conf.j2
@@ -1,11 +1,11 @@
 primary_hostname='{{ exim_domain }}'
 dc_eximconfig_configtype='{{ exim_config_type }}'
 dc_other_hostnames='{{ exim_mailname }} ; {{ exim_domain }}'
-dc_local_interfaces='127.0.0.1 ; ::1 ; {{ exim_ip }}'
+dc_local_interfaces='{{ exim_local_interfaces }}'
 dc_readhost=''
-dc_relay_domains=''
+dc_relay_domains='{{ exim_relay_domains | join(" ; ") }}'
 dc_minimaldns='false'
-dc_relay_nets=''
+dc_relay_nets='{{ exim_relay_nets | join(" ; ") }}'
 dc_smarthost=''
 CFILEMODE='644'
 dc_use_split_config='false'
