--- a/templates/update-exim4.conf.j2
+++ b/templates/update-exim4.conf.j2
@@ -1,7 +1,7 @@
 primary_hostname='{{ exim_domain }}'
 dc_eximconfig_configtype='{{ exim_config_type }}'
 dc_other_hostnames='{{ exim_mailname }} ; {{ exim_domain }}'
-dc_local_interfaces='{{ exim_local_interfaces }}'
+dc_local_interfaces='{{ exim_local_interfaces | join(" ; ") }}'
 dc_readhost=''
 dc_relay_domains='{{ exim_relay_domains | join(" ; ") }}'
 dc_minimaldns='false'
