add exim_ignore_rf1918 option

--- a/templates/exim4.conf.template.j2
+++ b/templates/exim4.conf.template.j2
@@ -1101,6 +1101,9 @@ dnslookup:
   #ignore_target_hosts = 0.0.0.0 : 127.0.0.0/8 : 192.168.0.0/16 :\
   #                      172.16.0.0/12 : 10.0.0.0/8 : 169.254.0.0/16 :\
   #			255.255.255.255
+  {% if exim_ignore_rf1918 %}
+    ignore_target_hosts = {{ exim_non_rf1918_cidrs }}
+  {% endif %}
   no_more
 
 .endif
